kép nyomásra változik a kép

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,19 @@
     <script src="main.js"></script>
     <title>Document</title>
 </head>
-<body>
-    <article class="hatter">
 
+<body>
+    <main class="hatter2">
+        <section class="kepN">
+            <button class="bal">bal</button>
+            <div class="nagykép">
+                <img src="kep2.png" alt="kép">
+            </div>
+            <button class="jobb">jobb</button>
+        </section>
+    </main>
+    <article class="formazas">
     </article>
 </body>
+
 </html>
