--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <main class="hatter2">
         <section class="kepN">
-            <button class="bal">bal</button>
+            <button class="bal">(<--)</button>
             <div class="nagykép">
                 <img src="kep2.png" alt="kép">
             </div>
-            <button class="jobb">jobb</button>
+            <button class="jobb">(-->)</button>
         </section>
     </main>
     <article class="formazas">
